tests/snapshots/examples_fixtures/suggestions__multiple_similar.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/multiple_similar.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/suggestions/multiple_similar.flx:9:1
  |
9 | print(userNam);
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/suggestions/multiple_similar.flx:9:1
  |
9 | print(userNam);
  | ^^^^^^^^^^^^^^^
  | --------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `userNam`.

  --> examples/suggestions/multiple_similar.flx:9:7
  |
9 | print(userNam);
  |       ^^^^^^^

Hint:
  Define it first: let userNam = ...;


Help:
  Did you mean one of: `userName`, `userId`?

Found 3 errors.
== stdout ==
<not executed>
